--- a/Pagina cbt/Pagina_Cbt/Pagina_web.html
+++ b/Pagina cbt/Pagina_Cbt/Pagina_web.html
@@ -18,6 +18,7 @@
       --terciario: #2e6f47;
       --fondo: #bebebe;
       --bacground2:rgb(81, 102, 221);
+      --background3:rgb(29, 145, 0);
       --background_color: rgb(135, 152, 155);
       --white:rgb(250,250,250);
       --blue:rgb(29, 34, 105);
