--- a/Pagina cbt/Pagina_Cbt/Pagina_web.html
+++ b/Pagina cbt/Pagina_Cbt/Pagina_web.html
@@ -374,19 +374,19 @@
             <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;">
               <i class="bi bi-house"></i> Principal</button>
           </a>
-          <a href="/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html">
+          <a href="/Pagina cbt/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html">
             <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;">
               <i class="bi bi-body-text"></i> Conocenos</button>
           </a>
-          <a href="/Pagina_Cbt/Carreras/Carreras.html">
+          <a href="/Pagina cbt/Pagina_Cbt/Carreras/Carreras.html">
             <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;">
               <i class="bi bi-book-fill"></i> Carreras</button>
           </a>
-          <a href="/Pagina_Cbt/Revista/Revista.html">
+          <a href="/Pagina cbt/Pagina_Cbt/Revista/Revista.html">
             <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;" target="_blank">
               <i class="bi bi-book-half"></i> Revista</button>
           </a>
-          <a href="/Pagina_Cbt/Soles/Pagina_Soles.html">
+          <a href="/Pagina cbt/Pagina_Cbt/Soles/Pagina_Soles.html">
             <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;">
               <i class="bi bi-music-note-beamed"></i> Banda de marcha</button>
           </a>
@@ -430,7 +430,7 @@
     </div>
     <div class="Boton__card-card">
       <div class="Boton__card">
-        <a href="/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html" class="boton_more">
+        <a href="/Pagina cbt/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html" class="boton_more">
          <i class="bi bi-body-text"></i>
          <h2>Sobre Nosotros</h2>
          <p>
@@ -440,7 +440,7 @@
         </a>
       </div>
       <div class="Boton__card">
-        <a href="/Pagina_Cbt/Carreras/Carreras.html" class="boton_more">
+        <a href="/Pagina cbt/Pagina_Cbt/Carreras/Carreras.html" class="boton_more">
           <i class="bi bi-book-fill"></i>
           <h2>Carreras</h2>
           <p>
@@ -450,7 +450,7 @@
         </a>
       </div>
       <div class="Boton__card">
-        <a href="/Pagina_Cbt/Revista/Revista.html" class="boton_more">
+        <a href="/Pagina cbt/Pagina_Cbt/Revista/Revista.html class="boton_more">
          <i class="bi bi-book-half"></i>
          <h2>Revistas</h2>
          <p>
@@ -460,27 +460,7 @@
         </a>
       </div>
       <div class="Boton__card">
-        <a href="/Pagina_Cbt/Control escolar/Control_escolar.html" class="boton_more">
-          <i class="bi bi-wrench-adjustable-circle-fill"></i>
-         <h2>Control escolar</h2>
-         <p>
-           Aqui encontraras información acerca de las titulaciones, certificados y/o problemas técnicos en relación a la escuela,
-           tambien encontraras información de contacto con el encargado del área.
-         </p>
-        </a>
-      </div>
-      <div class="Boton__card">
-        <a href="/Pagina_Cbt/Directorio/directorio.html" class="boton_more">
-          <i class="bi bi-tags"></i>
-         <h2>Directorio</h2>
-         <p>
-           Aqui encontraras información respecto a nuestros directivos dentro del CBT, así como información del equipo docente y sus
-           áreas de especialidad.
-         </p>
-        </a>
-      </div>
-      <div class="Boton__card">
-        <a href="/Pagina_Cbt/Soles/Pagina_Soles.html" class="boton_more">
+        <a href="/Pagina cbt/Pagina_Cbt/Soles/Pagina_Soles.html" class="boton_more">
           <i class="bi bi-music-note-beamed"></i>
          <h2>Banda de marcha</h2>
          <p>
