--- a/Pagina cbt/Convocatoria/convocatoria.html
+++ b/Pagina cbt/Convocatoria/convocatoria.html
@@ -133,7 +133,9 @@
 
         <section>
             <div>
-                
+                <h1>
+                    Convocatorias actualizadas del CBT Dr. Ezequiel Capistrán Rodríguez
+                </h1>
             </div>
         </section>
 
