--- a/Pagina cbt/Pagina_Cbt/Pagina_web.html
+++ b/Pagina cbt/Pagina_Cbt/Pagina_web.html
@@ -450,7 +450,7 @@
         </a>
       </div>
       <div class="Boton__card">
-        <a href="/Pagina cbt/Pagina_Cbt/Revista/Revista.html class="boton_more">
+        <a href="/Pagina cbt/Pagina_Cbt/Revista/Revista.html" class="boton_more">
          <i class="bi bi-book-half"></i>
          <h2>Revistas</h2>
          <p>
