--- a/Pagina cbt/Pagina_Cbt/Revista/Revista.html
+++ b/Pagina cbt/Pagina_Cbt/Revista/Revista.html
@@ -187,7 +187,7 @@
       <div style="margin-right: 2.5%;">
         <nav class="menu">
           <ul>
-            <a href="/Pagina_Cbt/Pagina_web.html">
+            <a href="/Pagina cbt/Pagina_Cbt/Pagina_web.html">
               <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;">
                 <i class="bi bi-house"></i></button>
             </a>
@@ -195,7 +195,7 @@
               <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;">
                 <i class="bi bi-body-text"></i></button>
             </a>
-            <a href="/Pagina_Cbt/Carreras/Carreras.html">
+            <a href="/Pagina cbt/Pagina_Cbt/Carreras/Carreras.html">
               <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;">
                 <i class="bi bi-book-fill"></i></button>
             </a>
@@ -203,7 +203,7 @@
               <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;" target="_blank">
                 <i class="bi bi-book-half"></i></button>
             </a>
-            <a href="/Pagina_Cbt/Soles/Pagina_Soles.html">
+            <a href="/Pagina cbt/Pagina_Cbt/Soles/Pagina_Soles.html">
               <button style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;cursor: pointer;">
                 <i class="bi bi-music-note-beamed"></i></button>
             </a>
