--- a/Pagina cbt/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html
+++ b/Pagina cbt/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html
@@ -318,20 +318,20 @@
   </div>
  <section class="sticky-social-container">
     <article class="sticky-social">
-     <a href="/Pagina_Cbt/Pagina_web.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Pagina_web.html">
       <p>Principal</p>
       <i class="bi bi-house"></i>
      </a>
-     <a href="/Pagina_Cbt/Carreras/Carreras.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Carreras/Carreras.html">
        <p>Carreras</p>
        <i class="bi bi-book-fill"></i>
      </a>
-     <a href="/Pagina_Cbt/Revista/Revista.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Revista/Revista.html">
        <p>Revista</p>
        <i class="bi bi-book-half"></i>
      </a>
    </a>
-     <a href="/Pagina_Cbt/Soles/Pagina_Soles.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Soles/Pagina_Soles.html">
        <p>Banda</p>
        <i class="bi bi-music-note-beamed"></i>
      </a>
