--- a/Pagina cbt/Pagina_Cbt/Soles/Pagina_Soles.html
+++ b/Pagina cbt/Pagina_Cbt/Soles/Pagina_Soles.html
@@ -331,7 +331,7 @@ h3:hover span:nth-child(3){
 
   <section class="sticky-social-container">
     <article class="sticky-social">
-     <a href="/Pagina_Cbt/Pagina_web.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Pagina_web.html">
       <p>Principal</p>
       <i class="bi bi-house"></i>
      </a>
@@ -339,11 +339,11 @@ h3:hover span:nth-child(3){
       <p>Conocenos</p>
       <i class="bi bi-body-text"></i>
      </a>
-     <a href="/Pagina_Cbt/Carreras/Carreras.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Carreras/Carreras.html">
        <p>Carreras</p>
        <i class="bi bi-book-fill"></i>
      </a>
-     <a href="/Pagina_Cbt/Revista/Revista.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Revista/Revista.html">
        <p>Revista</p>
        <i class="bi bi-book-half"></i>
      </a>
