--- a/Pagina cbt/Pagina_Cbt/Carreras/Carreras.html
+++ b/Pagina cbt/Pagina_Cbt/Carreras/Carreras.html
@@ -208,7 +208,7 @@
   </div>
   <section class="sticky-social-container">
     <article class="sticky-social">
-     <a href="/Pagina_Cbt/Pagina_web.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Pagina_web.html">
       <p>Principal</p>
       <i class="bi bi-house"></i>
      </a>
@@ -216,11 +216,11 @@
       <p>Conocenos</p>
       <i class="bi bi-body-text"></i>
      </a>
-     <a href="/Pagina_Cbt/Revista/Revista.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Revista/Revista.html">
        <p>Revista</p>
        <i class="bi bi-book-half"></i>
      </a>
-     <a href="/Pagina_Cbt/Soles/Pagina_Soles.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Soles/Pagina_Soles.html">
        <p>Banda</p>
        <i class="bi bi-music-note-beamed"></i>
      </a>
