--- a/Pagina cbt/Convocatoria/convocatoria.html
+++ b/Pagina cbt/Convocatoria/convocatoria.html
@@ -136,6 +136,7 @@
                 <h1>
                     Convocatorias actualizadas del CBT Dr. Ezequiel Capistrán Rodríguez
                 </h1>
+                <img src="/Pagina cbt/Convocatoria/CONVOCATORIA_INGRESO_MEDIA_SUPERIOR_2025_page-0001.jpg" alt="Convocatoria 2025 nuevo ingreso" style="width: 80%; height: auto; justify-content: center; display: block;">
             </div>
         </section>
 
