--- a/Pagina cbt/Pagina_Cbt/Carreras/Carreras.html
+++ b/Pagina cbt/Pagina_Cbt/Carreras/Carreras.html
@@ -212,7 +212,7 @@
       <p>Principal</p>
       <i class="bi bi-house"></i>
      </a>
-     <a href="/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html">
+     <a href="/Pagina cbt/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html">
       <p>Conocenos</p>
       <i class="bi bi-body-text"></i>
      </a>
