--- a/Pagina cbt/Pagina_Cbt/Pagina_web.html
+++ b/Pagina cbt/Pagina_Cbt/Pagina_web.html
@@ -435,7 +435,7 @@
          <h2>Sobre Nosotros</h2>
          <p>
            Aqui te explicaremos de mejor manera el funcionamiento del CBT así como te actualizaremos de las convocatorias para
-           el ingreso al plantel como alumno. Asi como te explicaremos como funciona todo lo relacionado a la carga académico-laboral.
+           el ingreso al plantel como alumno. Te explicaremos como funciona todo lo relacionado a la carga académico-laboral.
          </p>
         </a>
       </div>
