--- a/Pagina cbt/Pagina_Cbt/Revista/Revista.html
+++ b/Pagina cbt/Pagina_Cbt/Revista/Revista.html
@@ -246,13 +246,14 @@
     </ul>
     </div>
     <div class="pagina" id="pagina2">P2</div>
+    <div class="pagina" id="pagina3">p3</div>
   </div>
 
   
 
   <script>
     let paginaActual = 0;
-    const idsPaginas = ["Portada", "indice", "pagina2"]; // Puedes modificar esto
+    const idsPaginas = ["Portada", "indice", "pagina2","pagina3"]; // Puedes modificar esto
 
     function mostrarPaginaPorNumero(numero) {
       const paginas = document.querySelectorAll(".pagina");
