--- a/Pagina cbt/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html
+++ b/Pagina cbt/Pagina_Cbt/Sobre_Nosotros/Sobre_nosotros.html
@@ -343,20 +343,15 @@
        ¿Quienes somos? <i class="bi bi-stars"></i>
      </h2 max-width: 900px;>
      <br style="font-size: 1.1rem;margin-top: 1.1rem;margin-bottom: 1.1rem;justify-content: center;padding: 50px 0; text-align: center;display: flex;flex-direction: column;align-items: center;">
-      La escuela preparatoria C.B.T. Dr. Ezequiel Capistran Rodríguez, Metepec es una
+      La escuela preparatoria CBT Dr. Ezequiel Capistran Rodríguez, Metepec es una
       institución educativa que forma parte del Colegio de Bachilleres del Estado de
-      México. Fue fundada en el año 1996 con el objetivo de ofrecer educación
-      media superior de calidad a los jóvenes del municipio de Metepec.
-      La escuela lleva el nombre del Dr. Ezequiel Capistran Rodríguez, quien fue un
-      destacado médico y académico de la región. Su legado se refleja en la formación
-      integral que se busca brindar a los estudiantes, promoviendo valores como la
-      responsabilidad, el compromiso y la excelencia académica.
+      México. Su objetivo de ofrecer educación de calidad a los jóvenes del municipio de Metepec.
       La organización general de la escuela preparatoria se compone de diferentes
       áreas, como la dirección, la subdirección académica, la subdirección
       administrativa, el departamento de servicios escolares y el departamento de
       orientación educativa. Además, cuenta con un cuerpo docente altamente
       calificado y comprometido con la educación de los estudiantes.
-      La escuela preparatoria C.B.T. Dr. Ezequiel Capistran Rodríguez ofrece una
+      La escuela preparatoria CBT Dr. Ezequiel Capistran Rodríguez ofrece una
       amplia variedad de programas educativos, actividades extracurriculares y
       servicios de apoyo para garantizar el desarrollo integral de los jóvenes. Asimismo,
       fomenta la participación activa de la comunidad estudiantil en eventos culturales,
