--- a/Pagina cbt/Pagina_Cbt/Pagina_web.html
+++ b/Pagina cbt/Pagina_Cbt/Pagina_web.html
@@ -20,7 +20,7 @@
     <div style="background: url(Escuela\ background.jpg); display: flex; flex-direction: column; align-items: center; padding: 20px;">
       <div style="display: flex; align-items: center;">
         <img src="cbtl.png" style="width: 80px; height: 80px;">
-        <h1>
+        <h1 class="titulo__principal">
           CBT. DR. EZEQUIEL CAPISTRÁN RODRÍGUEZ, METEPEC
         </h1>
       </div>
@@ -54,8 +54,8 @@
   </div>
 
   <section>
-    <div style="bottom: 30%;padding: 0 50px;">
-      <h1 style="font-size: 7rem; text-align: center;">
+    <div class="bienvenidos">
+      <h1>
         <span>B</span>
         <span>I</span>
         <span>E</span>
@@ -68,12 +68,12 @@
         <span>O</span>
         <span>S</span>
       </h1>
-      <h2 style="font-size: 4rem; text-align: center;">CBT Dr Ezequiel Capistrán Rodríguez, Metepec</h2>
-        <p style="font-size: 1.1rem;margin-top: 20px;margin-bottom: 20px; text-align: center;">
+      <h2>CBT Dr Ezequiel Capistrán Rodríguez, Metepec</h2>
+        <p>
           Somos una institución de Bachillerato Tecnológico que ofrece las carreras de Técnico en Informática, Técnico en Contabilidad, Técnico en Diseño Asistido por Computadora y Técnico en Administración.
           Introducimos a nuestros alumnos al campo laboral de sus respectivas carreras, dotandolos de conocimientos de tronco común e introducciones a su carrera.
         </p>
-        <p style="font-size: 1.1rem;margin-top: 20px;margin-bottom: 20px; text-align: center;">
+        <p>
           ¡Así preparamos de la mejor forma posible a cada generación de alumnos!
         </p>
     </div>
